// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Price actions Should set the cost 1`] = `
Object {
  "payload": Object {
    "cost": 10,
  },
  "type": "@@MT/EVENTS/SET_PRICE_COST",
}
`;

exports[`[STORE] - Price actions Should set the position of the symbol 1`] = `
Object {
  "payload": Object {
    "position": "suffix",
  },
  "type": "@@MT/EVENTS/SET_PRICE_POSITION",
}
`;

exports[`[STORE] - Price actions Should set the symbol 1`] = `
Object {
  "payload": Object {
    "symbol": "€",
  },
  "type": "@@MT/EVENTS/SET_PRICE_SYMBOL",
}
`;
